kubernetes/namespace/ops/jenkins/04-ingress.yaml
---
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: jenkins
  annotations:
    kubernetes.io/ingress.class: traefik
    ingress.kubernetes.io/ssl-redirect: "true"   
    #traefik.ingress.kubernetes.io/router.tls: "true" 
spec:
  rules:
  - host: infra.drm.lab.emc.com
    http:
      paths:
      - path: /
        backend:
          serviceName: jenkins
          servicePort: 80
  #tls:
  #- hosts:
  #  - jenkins.dnd.ai
  #  secretName: jenkins-secret
